Fixed Color contrast.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 
 /* Variables */
 :root {
-    --primary-color: #FF0000;
+    --primary-color: #C70000;
     --secondary-color: #F8F8F8;
     --darker-primary: #be0404;
 
